libfg2/libfg2.h

///
/// Type of video inputs on a frame grabber device.
///
#define FG_INPUT_TYPE_TUNER     V4L2_INPUT_TYPE_TUNER
#define FG_INPUT_TYPE_CAMERA    V4L2_INPUT_TYPE_CAMERA
///
/// Supported pixel formats, as supported by libv4l for destination buffers.
///
#define FG_FORMAT_RGB24         V4L2_PIX_FMT_RGB24
#define FG_FORMAT_BGR24         V4L2_PIX_FMT_BGR24
#define FG_FORMAT_YUV420        V4L2_PIX_FMT_YUV420
#define FG_FORMAT_YVU420        V4L2_PIX_FMT_YVU420
#define FG_FORMAT_DEFAULT       FG_FORMAT_RGB24
///
/// Represents rectangular dimension.
///
typedef struct
{
    int left;   ///< Left/x position in pixels
    int top;    ///< Top/y position in pixels
    int width;  ///< Width in pixels
    int height; ///< Height in pixels

} fg_rect;
///
/// Represents the size of things.
///
typedef struct
{
    unsigned int width;     ///< Width in pixels
    unsigned int height;    ///< Height in pixels

} fg_size;
typedef struct v4l2_capability  fg_caps;
typedef struct v4l2_input       fg_input;
typedef struct v4l2_tuner       fg_tuner;
typedef struct v4l2_cropcap     fg_crop;
typedef struct v4l2_format      fg_format;
typedef struct v4l2_queryctrl   fg_control;
///
/// This stores the raw frames read from the frame grabber.
///
typedef struct
{
    fg_size         size;           ///< Size in pixels
    int             rowstride;      ///< Number of bytes per line
    int             format;         ///< FG_FORMAT_* pixel format
    int             length;         ///< Size of data in bytes
    unsigned char   *data;          ///< Pointer to the image data
    struct timeval timestamp;       ///< Timestamp when frame was grabbed

} fg_frame;
///
/// This stores information associated with a frame grabber device.
///
typedef struct
{
    char                    *device;        ///< Device name, eg. "/dev/video0"
    int                     fd;             ///< File handle for open device
    fg_caps                 caps;           ///< Device capabilities
    fg_input                *inputs;        ///< Input sources (eg. TV, SVideo)
    int                     num_inputs;     ///< Number of input sources
    int                     input;          ///< Currently selected input
    fg_tuner                *tuners;        ///< TV or Radio tuner
    int                     num_tuners;     ///< Number of tuners on device
    int                     tuner;          ///< Currently selected tuner
    fg_crop                 cropcap;        ///< Capture window
    fg_format               format;         ///< Video format (size, etc)
    fg_control              *controls;      ///< Video controls (hue, etc)
    int                     num_controls;   ///< Number of controls

} fg_grabber;
//------------------------------------------------------------------------------
///
/// \brief  Open a new frame grabber device.
///
/// This function opens the device specified, initializes it, and sets some
/// defaults to allow capture from the device without any further settings.
/// The pointer returned must be closed with fg_close() to free any memory
/// which gets allocated in this function and to close the file descriptor.
///
/// \param  dev     Path to the Video4Linux2 character device (ex. /dev/video0)
///                 or the default device (FG_DEFAULT_DEVICE).
///
/// \return If the device can be successfully opened and initialized then a
///         fg_grabber is returned fully configured.  In case of any errors
///         NULL is returned.
///
fg_grabber *fg_open(const char *dev);
//------------------------------------------------------------------------------
///
/// \brief  Close a previously opened frame grabber device.
///
/// This function closes the frame grabber device and frees any allocated
/// memory associated with it.  Use this function when you're done with the
/// frame grabber opened with fg_open().
///
/// \param  fg  Frame grabber device to close.
///
void fg_close(fg_grabber *fg);
///
/// \brief  Set the video input (source).
///
/// This function sets the input number on the frame grabber device to the
/// specified index.  The index specified must be between 0 and fg->num_inputs.
///
/// \param  fg      Frame grabber device to set input on.
/// \param  index   Input number to switch to.
///
/// \return If the input is switched successfully, 0 is returned.  If an error
///         occurred then -1 is returned.
///
int fg_set_input(fg_grabber* fg, int index);
//------------------------------------------------------------------------------
///
/// \brief  Get the current video input (source).
///
/// This function returns the currently selected input number on the frame
/// grabber device.
///
/// \param  fg  Frame grabber device to get selected input on.
///
/// \return If the currently selected input can be determined, it is returned,
///         otherwise -1 is returned.
///
int fg_get_input(fg_grabber *fg);
//------------------------------------------------------------------------------
/* todo */
/*int fg_set_source_norm( fg_grabber* fg, int norm );*/

//------------------------------------------------------------------------------
///
/// \brief  Get the number of inputs.
///
/// This function enumerates through all the available video inputs on a
/// frame grabber device and returns the total count.
///
/// \param  fg  Frame grabber device to count inputs on.
///
/// \return The number of inputs on the frame grabber are returned (>=0).
///
int fg_get_input_count(fg_grabber *fg);
//------------------------------------------------------------------------------
///
/// \brief  Get the index of the current input.
///
/// This function gets the index of the currently selected input on the frame
/// grabber device.
///
/// \param  fg  Frame grabber device to get input index on.
///
/// \return The currently selected/active input on the frame grabber or -1 in
///         case of an error.
///
int fg_get_input(fg_grabber *fg);
//------------------------------------------------------------------------------
///
/// \brief  Set the active/selected input.
///
/// This function sets the currently selected input to the index specifed.
///
/// \param  fg  Frame grabber device to set input index on.
///
/// \return The index specified is returned if the input was switched or -1 if
///         an error occurred.
///
int fg_set_input(fg_grabber* fg, int index);
//------------------------------------------------------------------------------
///
/// \brief  Tune a tuner to a specific frequency.
///
/// This function sets the frequency of the default tuner on the current video
/// input to a specific frequency in MHz.
///
/// \param  fg      The frame grabber to get the tuner frequency on.
/// \param  freq    The frequency in MHz to set the tuner to.
///
/// \return On success, 0 is returned or if an error occurred -1 is returned.
///
/// @todo   Test this function and check scaling and such (copied from libfg).
///
int fg_set_channel(fg_grabber* fg, float freq);
//------------------------------------------------------------------------------
///
/// \brief  Get the frequency of a tuner.
///
/// This function gets the currently tuned frequency on a tuner on the current
/// video input in MHz.
///
/// \param  fg  The frame grabber with the tuner to get the frequency of.
///
/// \return On success, the current frequency is returned or -1 if an error
///         occurred.
///
/// @todo   Test this function and check scaling and such (copied from libfg).
///
float fg_get_channel( fg_grabber* fg );
//------------------------------------------------------------------------------
///
/// \brief  Set the selected video format.
///
/// This function sets the video format of the currently active input.  The
/// formats are of a select few; FG_FORMAT_RGB24, FG_FORMAT_BGR24,
/// FG_FORMAT_YUV420, or FG_FORMAT_YVU240.  The libv4l library is used to
/// provide transparent conversion from the actual video formats supported by
/// the frame grabber to one of these.  Many source formats are supported.  If
/// you intend to use the fg_frame_save() function, then choose FG_FORMAT_RGB24.
///
/// \param  fg      The frame grabber to set the format on.
/// \param  fmt     The video format to set.
///
/// \return On success, 0 is returned or -1 is returned if an error occurred.
///
int fg_set_format(fg_grabber *fg, int fmt);
//------------------------------------------------------------------------------
///
/// \brief  Get the selected video format.
///
/// This function gets the currently selected video input format.  The format
/// is one of FG_FORMAT_RGB24, FG_FORMAT_BGR24, FG_FORMAT_YUV420, or
/// FG_FORMAT_YVU420.
///
/// \param  fg  The frame grabber to set the format on.
///
/// \return On success one of FG_FORMAT_* is returned or -1 if an error
///         occurred.
///
int fg_get_format(fg_grabber *fg);
//------------------------------------------------------------------------------
///
///\brief   Set the size of the video frames.
///
/// This function sets the size of the video frames captured from the frame
/// grabber.  By default the size will be FG_DEFAULT_WIDTH and
/// FG_DEFAULT_HEIGHT.
///
/// \param  fg      The frame grabber to set the capture size on.
/// \param  size    The size of the frames grabbed.
///
/// \return On success, 0 is returned or -1 is returned if an error occurred.
///
int fg_set_capture_size(fg_grabber *fg, fg_size size);
//------------------------------------------------------------------------------
///
/// \brief  Get the size of the video frames.
///
/// This function returns the size that the grabbed frames will be.
///
/// \param  fg      The frame grabber to get the size on.
/// \param  size    Pointer to an fg_size where the current width and height
///                 will be stored.
///
/// \return On success 0, on error -1.
///
fg_size fg_get_capture_size(fg_grabber *fg);
//------------------------------------------------------------------------------
///
/// \brief  Set the cropping window for the video frames.
///
/// This function sets the cropping fg_rect which will crop out a region of the
/// full capture frames.  This may not be supported at all on some devices.
///
/// \param  fg      The frame grabber to set capture window on.
/// \param  rect    The dimensions of the capture window.
///
/// \return On success 0, on error -1.
///
int fg_set_capture_window(fg_grabber *fg, fg_rect rect);
//------------------------------------------------------------------------------
///
/// \brief  Get the current capture window for the video frames.
///
/// This function gets the cropping fg_rect which is currently cropped out of
/// a region of the full capture frames.  This may not be supported on some
/// devices.
///
/// \param  fg      The frame grabber to get the capture window on.
/// \param  rect    The cropping rectangle to crop out of full frame.
///
/// \return On success 0, on error -1.
///
fg_rect fg_get_capture_window(fg_grabber *fg);
///
/// Enumerations for control IDs.
///
typedef enum {
    /// Picture brightness, or more precisely, the black level.
    FG_CONTROL_ID_BRIGHTNESS             = V4L2_CID_BRIGHTNESS,
    /// Picture contrast or luma gain.
    FG_CONTROL_ID_CONTRAST               = V4L2_CID_CONTRAST,
    /// Picture color saturation or chroma gain.
    FG_CONTROL_ID_SATURATION             = V4L2_CID_SATURATION,
    /// Hue or color balance.
    FG_CONTROL_ID_HUE                    = V4L2_CID_HUE,
    /// Overall audio volume. Note some drivers also provide an OSS or ALSA mixer interface.
    FG_CONTROL_ID_AUDIO_VOLUME           = V4L2_CID_AUDIO_VOLUME,
    /// Audio stereo balance. Minimum corresponds to all the way left, maximum to right.
    FG_CONTROL_ID_AUDIO_BALANCE          = V4L2_CID_AUDIO_BALANCE,
    /// Audio bass adjustment.
    FG_CONTROL_ID_AUDIO_BASS             = V4L2_CID_AUDIO_BASS,
    /// Audio treble adjustment.
    FG_CONTROL_ID_AUDIO_TREBLE           = V4L2_CID_AUDIO_TREBLE,
    /// Mute audio, i. e. set the volume to zero, however without affecting #FG_CONTROL_ID_AUDIO_VOLUME. Like ALSA drivers, V4L2 drivers must mute at load time to avoid excessive noise. Actually the entire device should be reset to a low power consumption state.
    FG_CONTROL_ID_AUDIO_MUTE             = V4L2_CID_AUDIO_MUTE,
    /// Loudness mode (bass boost).
    FG_CONTROL_ID_AUDIO_LOUDNESS         = V4L2_CID_AUDIO_LOUDNESS,
    /// Automatic white balance (cameras).
    FG_CONTROL_ID_AUTO_WHITE_BALANCE     = V4L2_CID_AUTO_WHITE_BALANCE,
    /// This is an action control. When set (the value is ignored), the device will do a white balance and then hold the current setting. Contrast this with the boolean #FG_CONTROL_ID_AUTO_WHITE_BALANCE, which, when activated, keeps adjusting the white balance.
    FG_CONTROL_ID_DO_WHITE_BALANCE       = V4L2_CID_DO_WHITE_BALANCE,
    /// Red chroma balance.
    FG_CONTROL_ID_RED_BALANCE            = V4L2_CID_RED_BALANCE,
    /// Blue chroma balance.
    FG_CONTROL_ID_BLUE_BALANCE           = V4L2_CID_BLUE_BALANCE,
    /// Gamma adjust.
    FG_CONTROL_ID_GAMMA                  = V4L2_CID_GAMMA,
    /// Exposure (cameras).
    FG_CONTROL_ID_EXPOSURE               = V4L2_CID_EXPOSURE,
    /// Automatic gain/exposure control.
    FG_CONTROL_ID_AUTO_GAIN              = V4L2_CID_AUTOGAIN,
    /// Gain control.
    FG_CONTROL_ID_GAIN                   = V4L2_CID_GAIN,
    /// Mirror the picture horizontally.
    FG_CONTROL_ID_HFLIP                  = V4L2_CID_HFLIP,
    /// Mirror the picture vertically.
    FG_CONTROL_ID_VFLIP                  = V4L2_CID_VFLIP,
    /// Enables a power line frequency filter to avoid flicker. Possible values are: #FG_CONTROL_ID_POWER_LINE_FREQUENCY_DISABLED (0), #FG_CONTROL_ID_POWER_LINE_FREQUENCY_50HZ (1) and #FG_CONTROL_ID_POWER_LINE_FREQUENCY_60HZ (2).
    FG_CONTROL_ID_POWER_LINE_FREQUENCY   = V4L2_CID_POWER_LINE_FREQUENCY,
    /// Enables automatic hue control by the device. The effect of setting #FG_CONTROL_ID_HUE while automatic hue control is enabled is undefined, drivers should ignore such request.
    FG_CONTROL_ID_AUTO_HUE               = V4L2_CID_HUE_AUTO,
    /// This control specifies the white balance settings as a color temperature in Kelvin. A driver should have a minimum of 2800 (incandescent) to 6500 (daylight). For more information about color temperature see Wikipedia.
    FG_CONTROL_ID_WHITE_BALANCE_TEMP     = V4L2_CID_WHITE_BALANCE_TEMPERATURE,
    /// Adjusts the sharpness filters in a camera. The minimum value disables the filters, higher values give a sharper picture.
    FG_CONTROL_ID_SHARPNESS              = V4L2_CID_SHARPNESS,
    /// Adjusts the backlight compensation in a camera. The minimum value disables backlight compensation.
    FG_CONTROL_ID_BACKLIGHT_COMPENSATION = V4L2_CID_BACKLIGHT_COMPENSATION,
    FG_CONTROL_ID_CHROMA_AGC             = V4L2_CID_CHROMA_AGC,
    FG_CONTROL_ID_COLOR_KILLER           = V4L2_CID_COLOR_KILLER,
    FG_CONTROL_ID_COLOR_EFFECTS          = V4L2_CID_COLORFX,
    FG_CONTROL_ID_AUTO_BRIGHTNESS        = V4L2_CID_AUTOBRIGHTNESS,
    FG_CONTROL_ID_BAND_STOP_FILTER       = V4L2_CID_BAND_STOP_FILTER,
    FG_CONTROL_ID_ROTATE                 = V4L2_CID_ROTATE,
    FG_CONTROL_ID_BACKGROUND_COLOR       = V4L2_CID_BG_COLOR,
} fg_control_id;
//------------------------------------------------------------------------



/** @} */ // end of control group

//------------------------------------------------------------------------------

/** @defgroup frame Frame-related functions
 * These functions pertain to individual frames.
 * @{
 */

///
/// \brief  Allocate memory for a new frame.
///
/// This function allocates memory for a new frame based on the frame grabber's
/// current settings (width, height, number of bytes, etc.).  A frame created
/// with this function can be passed to any of the fg_frame_* functions and
/// fg_grab_frame().  To free the memory used by the fg_frame, you must call
/// fg_frame_release() with a pointer to it.  Unless you're using some sort of
/// buffer array of frames, it's probably best to use a single fg_frame for
/// all operations so that malloc() and free() don't get called as often.
///
/// \param  fg  The frame grabber who's settings to use to initialize the frame.
///
/// \return A pointer to a new fg_frame with properties set and memory allocated
///         for the frame's buffer.
///
fg_frame *fg_frame_new(fg_grabber *fg);
//------------------------------------------------------------------------------

///
/// \brief Free memory used by an existing frame.
///
/// This function is a synonym for #fg_frame_release().
///
/// \param fr  The frame to release memory from.
///
void fg_frame_free(fg_frame *fr);